# ChangeLog for dev-python/pymountboot
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/pymountboot/ChangeLog,v 1.18 2015/04/08 08:05:23 mgorny Exp $

  08 Apr 2015; Michał Górny <mgorny@gentoo.org> pymountboot-0.2.1.ebuild,
  pymountboot-0.2.2.ebuild:
  Drop old Python implementations

  26 Nov 2014; Michał Górny <mgorny@gentoo.org> pymountboot-9999.ebuild:
  Add py3.4 to -9999 as well.

  24 Nov 2014; Pacho Ramos <pacho@gentoo.org> pymountboot-0.2.2.ebuild:
  Support python 3.4

  06 Jul 2014; Michał Górny <mgorny@gentoo.org> pymountboot-0.2.1.ebuild,
  pymountboot-0.2.2.ebuild, pymountboot-9999.ebuild:
  Replace obsolete mirror://bitbucket with the real URI.

  31 Mar 2014; Michał Górny <mgorny@gentoo.org> pymountboot-0.2.2.ebuild,
  pymountboot-9999.ebuild:
  Add support for the new PyPy slotting.

  14 Oct 2013; Michał Górny <mgorny@gentoo.org> pymountboot-9999.ebuild:
  Switch to git-r3.

  14 Sep 2013; Mike Gilbert <floppym@gentoo.org> pymountboot-0.2.2.ebuild,
  pymountboot-9999.ebuild:
  Add -fno-strict-aliasing for python2.

  05 Sep 2013; Michał Górny <mgorny@gentoo.org> pymountboot-0.2.1.ebuild,
  pymountboot-0.2.2.ebuild, pymountboot-9999.ebuild:
  Clean up PYTHON_COMPAT from old implementations.

  07 Aug 2013; Michał Górny <mgorny@gentoo.org> pymountboot-0.2.2.ebuild,
  pymountboot-9999.ebuild:
  Drop removed Python implementations from PYTHON_COMPAT.

  07 Aug 2013; Michał Górny <mgorny@gentoo.org> pymountboot-0.2.2.ebuild,
  pymountboot-9999.ebuild:
  Enable pypy2.0.

  17 Dec 2012; Michał Górny <mgorny@gentoo.org> pymountboot-0.2.1.ebuild,
  pymountboot-0.2.2.ebuild, pymountboot-9999.ebuild:
  Bump to EAPI=5 to make Paludis happy, bug #447524.

*pymountboot-9999 (15 Dec 2012)

  15 Dec 2012; Michał Górny <mgorny@gentoo.org> +pymountboot-9999.ebuild:
  Import the live ebuild.

*pymountboot-0.2.2 (10 Dec 2012)
