@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-	<maintainer>
-		<email>mgorny@gentoo.org</email>
-		<name>Michał Górny</name>
-	</maintainer>
-	<upstream>
-		<maintainer status="active">
-			<email>mgorny@gentoo.org</email>
-			<name>Michał Górny</name>
-		</maintainer>
-		<bugs-to>https://bitbucket.org/mgorny/pymountboot/issues/</bugs-to>
-	</upstream>
+  <maintainer>
+    <email>mgorny@gentoo.org</email>
+    <name>Michał Górny</name>
+  </maintainer>
+  <upstream>
+    <maintainer status="active">
+      <email>mgorny@gentoo.org</email>
+      <name>Michał Górny</name>
+    </maintainer>
+    <bugs-to>https://bitbucket.org/mgorny/pymountboot/issues/</bugs-to>
+    <remote-id type="bitbucket">mgorny/pymountboot</remote-id>
+  </upstream>
 </pkgmetadata>
