@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/pymountboot
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pymountboot/ChangeLog,v 1.18 2015/04/08 08:05:23 mgorny Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pymountboot/ChangeLog,v 1.19 2015/06/07 19:32:58 jlec Exp $
+
+  07 Jun 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
+  Add bitbucket to remote-id in metadata.xml
 
   08 Apr 2015; Michał Górny <mgorny@gentoo.org> pymountboot-0.2.1.ebuild,
   pymountboot-0.2.2.ebuild:
